--- a/app/templates/styles/sass/helper.scss
+++ b/app/templates/styles/sass/helper.scss
@@ -56,7 +56,7 @@
 
 .flex-left-center {
 	display: flex;
-	justify-content: left;
+	justify-content: flex-start;
 	align-items: center;
 }
 
@@ -347,7 +347,7 @@
 }
 
 .hide {
-	display: hidden;
+	display: none;
 }
 
 .ellipsis {
