--- a/app/templates/styles/sass/overwrite.scss
+++ b/app/templates/styles/sass/overwrite.scss
@@ -102,3 +102,27 @@
  	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
  	background-color: $scrollbar-thumb;
  }
+
+ /* overriding valdiation schema */
+
+
+md-input-container {
+ 	height: 30px;
+}
+
+.md-errors-spacer {
+    float: none !important;
+    p {
+        font-family: $medium-font;
+        font-size: 13px;
+        color: $blush;
+        overflow: hidden;
+        position: absolute;
+        top: 32px;
+        -webkit-margin-before: 0em;
+        -webkit-margin-after: 0em;
+        -webkit-margin-start: 0px;
+        -webkit-margin-end: 0px;
+    }
+}
+
